cmake_minimum_required(VERSION 3.17.3)
project(code4cpp)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(ch01)
add_subdirectory(ch02)
add_subdirectory(ch03)
add_subdirectory(ch04)
add_subdirectory(ch05)
add_subdirectory(ch06)
add_subdirectory(echos)
add_subdirectory(kqueue)
add_subdirectory(epoll)
add_subdirectory(client)